--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ngrx/store": "^15.4.0",
     "autoprefixer": "^10.4.14",
     "postcss-scss": "^4.0.6",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.3",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
