--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@ngrx/store": "^15.4.0",
     "autoprefixer": "^10.4.14",
+    "i18n-js": "^4.2.3",
     "postcss-scss": "^4.0.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
